--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.psdimporter": "8.0.5",
     "com.unity.2d.spriteshape": "9.0.5",
+    "com.unity.cinemachine": "2.10.5",
     "com.unity.collab-proxy": "2.11.2",
     "com.unity.feature.development": "1.0.1",
     "com.unity.textmeshpro": "3.0.6",
